--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <audio controls>
           <source src="audio/podcast_versao_final.mp3" type="audio/mpeg">
         </audio>
+
+        <div>
+          <a href="https://docs.google.com/document/d/1iZZLDIdNElySSbJCWvmP8pnUMeb68HJ1o7LSjya5Q5c/edit?usp=sharing" target="__blank">Referências do Podcast</a>
+        </div>
+  
+        
         <!-- Fim da tag <audio> -->
       </div>
     </div>
