--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="app">
     <div id="player" class="player">
       <div class="wrapper">
-        <img src="https://nead.ifb.edu.br/pluginfile.php/599573/mod_book/chapter/4398/IFB-redonda.png" alt="Capa do PodCast">
+        <img src="https://www.ifb.edu.br/images/IFBVertical.png" alt="Capa do PodCast">
 
         <div class="info">
           <h1>PodCast - Programação</h1>
